<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".WorldSkills">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/inner_layout_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/aquamarine"
                android:paddingTop="10dp"
                android:textSize="16dp"
                android:text="@string/worldsk"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:paddingLeft="10dp"
                android:text="@string/steps"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:drawableLeft="@drawable/f1" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:text="@string/description"
                android:textColor="@color/aquamarine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/text"

                android:textAlignment="textStart"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white" />
            <Button
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:onClick="rez"
                android:textColor="@color/white"
                android:background="@drawable/sh"
                android:text="@string/send" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>