<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
       >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:src="@drawable/logo"/>
        <EditText
            android:id="@+id/login"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/r"
            android:textSize="16dp"
            android:layout_marginTop="-15dp"
            android:textColor="@color/aquamarine"
            android:hint="@string/email"
            android:paddingLeft="15dp"
            android:textColorHint="@color/aquamarine"/>
        <EditText
            android:layout_width="120dp"
            android:id="@+id/password"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/r"
            android:layout_marginTop="5dp"
            android:textSize="16dp"
            android:textColor="@color/aquamarine"
            android:hint="@string/password"
            android:paddingLeft="15dp"
            android:textColorHint="@color/aquamarine"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="next"
            android:textColor="@color/white"
            android:background="@drawable/sh"
            android:text="@string/sign_in" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>